--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "devDependencies": {
     "axios": "^0.15.3",
-    "bootstrap-sass": "^3.3.7",
+    "buefy": "^0.4.5",
+    "bulma": "^0.4.3",
     "cross-env": "^3.2.3",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
     "laravel-mix": "0.*",
     "lodash": "^4.17.4",
-    "vue": "^2.1.10"
+    "vue": "^2.1.10",
+    "vuetify": "^0.13.1"
   }
 }
